# ipa

./: CMakeLists.txt  db.c  db.h  device.c  device.h  main.c  utils.h
cmake/modules/: Findlibimobiledevice.cmake  Findlibplist.cmake  Findsqlite3.cmake
src/: CMakeLists.txt  album.c  album.h  db.c  db.h  device.c  device.h  filesystem.c  filesystem.h  logger.c  logger.h  main.c  path_parser.c  path_parser.h  photo.c  photo.h  utils.h
